# hajimu_engine_3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  hajimu.json  release.sh
.github/workflows/: build.yml
examples/: fly_camera.jp  hello_3d.jp  lighting.jp
include/: eng_3d.h
src/: eng_3d.c  plugin.c  win_gl.c  win_gl.h
